--- a/public/config.json
+++ b/public/config.json
@@ -20,6 +20,218 @@
     "alertMinutes": 10
   },
   "textRules": [],
+  "devices": [
+    {
+      "id": "D01",
+      "title": "Aurora Signal Bloom",
+      "type": "jammer",
+      "iconKey": "aurora-signal-bloom",
+      "pickupRadius": 150,
+      "effectSeconds": 180,
+      "lat": 44.9781,
+      "lng": -93.2642,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D02",
+      "title": "Cyclone Decoy Drone",
+      "type": "clone",
+      "iconKey": "cyclone-decoy-drone",
+      "pickupRadius": 110,
+      "effectSeconds": 150,
+      "lat": 44.979,
+      "lng": -93.2665,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D03",
+      "title": "Horizon Phase Gate",
+      "type": "smoke",
+      "iconKey": "horizon-phase-gate",
+      "pickupRadius": 95,
+      "effectSeconds": 210,
+      "lat": 44.9765,
+      "lng": -93.263,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D04",
+      "title": "Luminous Net Sphere",
+      "type": "jammer",
+      "iconKey": "luminous-net-sphere",
+      "pickupRadius": 130,
+      "effectSeconds": 165,
+      "lat": 44.9758,
+      "lng": -93.2672,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D05",
+      "title": "Quantum Resonance Node",
+      "type": "smoke",
+      "iconKey": "quantum-resonance-node",
+      "pickupRadius": 140,
+      "effectSeconds": 240,
+      "lat": 44.9772,
+      "lng": -93.2684,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D06",
+      "title": "Skyline Specter Kite",
+      "type": "clone",
+      "iconKey": "skyline-specter-kite",
+      "pickupRadius": 105,
+      "effectSeconds": 195,
+      "lat": 44.9801,
+      "lng": -93.2628,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D07",
+      "title": "Tempest Shield Array",
+      "type": "jammer",
+      "iconKey": "tempest-shield-array",
+      "pickupRadius": 170,
+      "effectSeconds": 220,
+      "lat": 44.9749,
+      "lng": -93.2647,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D08",
+      "title": "Nebula Scout Lantern",
+      "type": "smoke",
+      "iconKey": "nebula-scout-lantern",
+      "pickupRadius": 90,
+      "effectSeconds": 175,
+      "lat": 44.9788,
+      "lng": -93.2691,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D09",
+      "title": "Ion Surge Beacon",
+      "type": "jammer",
+      "iconKey": "ion-surge-beacon",
+      "pickupRadius": 160,
+      "effectSeconds": 205,
+      "lat": 44.9769,
+      "lng": -93.2619,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D10",
+      "title": "Chrono Anchor Relay",
+      "type": "clone",
+      "iconKey": "chrono-anchor-relay",
+      "pickupRadius": 125,
+      "effectSeconds": 200,
+      "lat": 44.9795,
+      "lng": -93.2678,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    }
+  ],
   "powerups": [],
   "theme": {
     "splash": {
