--- a/public/draft/config.json
+++ b/public/draft/config.json
@@ -21,7 +21,218 @@
     "alertMinutes": 10
   },
   "textRules": [],
-  "devices": [],
+  "devices": [
+    {
+      "id": "D01",
+      "title": "Aurora Signal Bloom",
+      "type": "jammer",
+      "iconKey": "aurora-signal-bloom",
+      "pickupRadius": 150,
+      "effectSeconds": 180,
+      "lat": 44.9781,
+      "lng": -93.2642,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D02",
+      "title": "Cyclone Decoy Drone",
+      "type": "clone",
+      "iconKey": "cyclone-decoy-drone",
+      "pickupRadius": 110,
+      "effectSeconds": 150,
+      "lat": 44.979,
+      "lng": -93.2665,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D03",
+      "title": "Horizon Phase Gate",
+      "type": "smoke",
+      "iconKey": "horizon-phase-gate",
+      "pickupRadius": 95,
+      "effectSeconds": 210,
+      "lat": 44.9765,
+      "lng": -93.263,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D04",
+      "title": "Luminous Net Sphere",
+      "type": "jammer",
+      "iconKey": "luminous-net-sphere",
+      "pickupRadius": 130,
+      "effectSeconds": 165,
+      "lat": 44.9758,
+      "lng": -93.2672,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D05",
+      "title": "Quantum Resonance Node",
+      "type": "smoke",
+      "iconKey": "quantum-resonance-node",
+      "pickupRadius": 140,
+      "effectSeconds": 240,
+      "lat": 44.9772,
+      "lng": -93.2684,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D06",
+      "title": "Skyline Specter Kite",
+      "type": "clone",
+      "iconKey": "skyline-specter-kite",
+      "pickupRadius": 105,
+      "effectSeconds": 195,
+      "lat": 44.9801,
+      "lng": -93.2628,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D07",
+      "title": "Tempest Shield Array",
+      "type": "jammer",
+      "iconKey": "tempest-shield-array",
+      "pickupRadius": 170,
+      "effectSeconds": 220,
+      "lat": 44.9749,
+      "lng": -93.2647,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D08",
+      "title": "Nebula Scout Lantern",
+      "type": "smoke",
+      "iconKey": "nebula-scout-lantern",
+      "pickupRadius": 90,
+      "effectSeconds": 175,
+      "lat": 44.9788,
+      "lng": -93.2691,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D09",
+      "title": "Ion Surge Beacon",
+      "type": "jammer",
+      "iconKey": "ion-surge-beacon",
+      "pickupRadius": 160,
+      "effectSeconds": 205,
+      "lat": 44.9769,
+      "lng": -93.2619,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    },
+    {
+      "id": "D10",
+      "title": "Chrono Anchor Relay",
+      "type": "clone",
+      "iconKey": "chrono-anchor-relay",
+      "pickupRadius": 125,
+      "effectSeconds": 200,
+      "lat": 44.9795,
+      "lng": -93.2678,
+      "trigger": {
+        "enabled": false,
+        "actionType": "media",
+        "actionTarget": "",
+        "actionLabel": "",
+        "actionThumbnail": "",
+        "triggerDeviceId": "",
+        "triggerDeviceLabel": "",
+        "triggeredResponseKey": "",
+        "triggeredMissionId": ""
+      }
+    }
+  ],
   "powerups": [],
   "media": {
     "rewardsPool": [],
@@ -42,14 +253,54 @@
     ],
     "devices": [
       {
-        "key": "smoke-shield",
-        "name": "Smoke Shield",
-        "url": "/media/bundles/SMOKE%20BOMB.png"
+        "key": "aurora-signal-bloom",
+        "name": "Aurora Signal Bloom",
+        "url": "https://images.unsplash.com/photo-1526498460520-4c246339dccb?auto=format&fit=crop&w=512&q=80"
       },
       {
-        "key": "roaming-robot",
-        "name": "Roaming Robot",
-        "url": "/media/bundles/ROBOT1small.png"
+        "key": "cyclone-decoy-drone",
+        "name": "Cyclone Decoy Drone",
+        "url": "https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "horizon-phase-gate",
+        "name": "Horizon Phase Gate",
+        "url": "https://images.unsplash.com/photo-1523966211575-eb4a75ec3f2e?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "luminous-net-sphere",
+        "name": "Luminous Net Sphere",
+        "url": "https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "quantum-resonance-node",
+        "name": "Quantum Resonance Node",
+        "url": "https://images.unsplash.com/photo-1518779578993-ec3579fee39f?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "skyline-specter-kite",
+        "name": "Skyline Specter Kite",
+        "url": "https://images.unsplash.com/photo-1504383309838-3c5e758e3dab?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "tempest-shield-array",
+        "name": "Tempest Shield Array",
+        "url": "https://images.unsplash.com/photo-1517694712202-14dd9538aa97?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "nebula-scout-lantern",
+        "name": "Nebula Scout Lantern",
+        "url": "https://images.unsplash.com/photo-1462331940025-496dfbfc7564?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "ion-surge-beacon",
+        "name": "Ion Surge Beacon",
+        "url": "https://images.unsplash.com/photo-1527430253228-e93688616381?auto=format&fit=crop&w=512&q=80"
+      },
+      {
+        "key": "chrono-anchor-relay",
+        "name": "Chrono Anchor Relay",
+        "url": "https://images.unsplash.com/photo-1504386106331-3e4e71712b38?auto=format&fit=crop&w=512&q=80"
       }
     ],
     "rewards": [
