--- a/package.json
+++ b/package.json
@@ -13,3 +13,11 @@
     "react-dom": "18.2.0"
   }
 }
+
+{
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start"
+  }
+}
